# PythonCode

eight_practice/: decorators.py  figures.py  log.txt  operations_on_figures.py  operator_overloading.py  overloading_test.py
fifth_practice/: algebraic_expression_solver.py  factorial.py  frequencies.py  percents.py
fourth_practice/: algebraic_expression_solver.py  brackets.py  bubble_sort.py  duplicates_removing.py  list_coincidence.py  tree_search.py
ioenv/Scripts/: activate  activate.bat
nine_practice/: figures.py  tdd_prime.py  test_figures.py  test_tdd_prime.py
second_practice/: endless_traffic_light.py  equation_solver.py  errors.py  traffic_light.py
seventh_practice/: README.md  setup.cfg  setup.py
seventh_practice/src/inputoutput/: ___init___.py
seventh_practice/src/inputoutput.egg-info/: PKG-INFO  SOURCES.txt
sixth_practice/: algebraic_expression_solver.py  fact_lambda_notrec.py  text.txt  text1.txt  xor.py  xor_with_as.py
third_practice/: equation_solver.py  fizzbuzz.py  letter_frequency.py  num_frequency.py  prime.py  xor_cypher.py
