[metadata]
name = inputoutput
version = 0.0.1
author = Romashov Vlad
author_email = r26101999v@gmail.com
description = Package for input and output operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bartholomeow/PythonCode
project_urls =
    Bug Tracker = https://github.com/Bartholomeow/PythonCode
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src